Fixes spacing issues around next/previous

--- a/app/_scss/pages/_blog.scss
+++ b/app/_scss/pages/_blog.scss
@@ -149,10 +149,11 @@
 				.post-content {
 					margin-top: 7em;
 				}
+			}
 
-				article, #paging {
-					margin-left: 30%;
-				}
+			#paging {
+				margin-left: 0;
+				padding-left: 0;
 			}
 		}
 	}
